--- a/assets/main.css
+++ b/assets/main.css
@@ -144,7 +144,7 @@ button:hover{cursor: pointer}
 
     /*button:before (attr data-hover)*/
     button:hover:before{opacity: 1; -webkit-transform: translate(0,0); transform: translate(0,0);}
-    label:before{
+    button:before{
       content: attr(data-hover);
       position: absolute;
       top: 1.1em; left: 0;
@@ -160,13 +160,23 @@ button:hover{cursor: pointer}
       transition: all .3s ease-in-out;
     }
       /*button div (button text before hover)*/
-      label:hover div{opacity: 0; -webkit-transform: translate(100%,0); transform: translate(100%,0)}
-      label div{
+      button:hover div{opacity: 0; -webkit-transform: translate(100%,0); transform: translate(100%,0)}
+      button div{
         text-transform: uppercase;
         letter-spacing: 3px;
         font-weight: 800;
         font-size: .8em;
         -webkit-transition: all .3s ease-in-out;
         transition: all .3s ease-in-out;
+      }
+
+      button:hover{cursor: pointer}
+      button {
+        color:white;
+        background: transparent; outline: none;
+        position: relative;
+        border: 2px solid #111;
+        padding: 15px 50px;
+        overflow: hidden;
       }
 /* Scrollbar End */
